--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "waaclock": "^0.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/waaclock": "^0.5.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "typescript": "^5"
