--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/pixelify-sans": "^5.0.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
