--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "tone": "^14.8.49"
   },
   "devDependencies": {
