--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/pixelify-sans": "^5.0.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
     "tone": "^14.8.49"
   },
   "devDependencies": {
