--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/pixelify-sans": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@vercel/postgres": "^0.5.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
