--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@vercel/postgres": "^0.5.1",
     "framer-motion": "^10.16.4",
+    "nanoid": "^5.0.3",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
