--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
-    "tone": "^14.8.49"
+    "tone": "^14.8.49",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
