--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
+    "format": "npx prettier . --write",
     "lint": "next lint",
     "prepare": "husky"
   },
