--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "format": "npx prettier . --write",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "kit:new": "tsx scripts/new-kit.ts"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
