refactor: Centralize audio engine, major performance overhaul (#65)
* fix: granular state in drumhaus, sequencer, instrumentcontrol for better performance

* fix: granular selectors on sequencer; improve memory efficiency in makeGoodMusic

* refactor: centralize Tone js management in lib/audio/engine

* chore: Optimized useMasterChain to use Zustand's subscribe API instead of selectors, preventing Drumhaus from re-rendering when master chain values change; add wdyr

* chore: update instrument params via subscriber instead of 10 useEffects; change sequencer stop to debug log

* finish extracting core audio engine

* minor adjustment to transport

* organize lib

* fix: update imports on kits / presets

--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/stats.js": "^0.17.4",
+    "@welldone-software/why-did-you-render": "^8.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "3.6.2",
+    "stats.js": "^0.17.0",
     "typescript": "^5"
   },
   "lint-staged": {
