wip: load preset from query param

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@fontsource-variable/pixelify-sans": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/postgres": "^0.5.1",
     "framer-motion": "^10.16.4",
+    "lz-string": "^1.5.0",
     "nanoid": "^5.0.3",
     "next": "14.0.2",
+    "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
@@ -32,7 +33,9 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@types/lz-string": "^1.5.0",
     "@types/node": "^20",
+    "@types/pako": "^2.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/stats.js": "^0.17.4",
