--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@next/bundle-analyzer": "^16.0.3",
     "@types/node": "^20",
     "@types/pako": "^2.0.4",
     "@types/react": "^18",
