chore: Migrate to Vite

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,8 @@
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# vite
+/dist
 
 # production
 /build
@@ -33,7 +32,6 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
 
 # Virtual Environment
 /venv
