--- a/package.json
+++ b/package.json
@@ -2,26 +2,27 @@
   "name": "drumhaus",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev -p 4444",
-    "build": "next build",
-    "start": "next start -p 4444",
+    "dev": "vite --port 4444",
+    "build": "tsc && vite build",
+    "preview": "vite preview --port 4444",
     "format": "npx prettier . --write",
-    "lint": "next lint",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky",
     "kit:new": "tsx scripts/new-kit.ts"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource-variable/pixelify-sans": "^5.2.7",
     "framer-motion": "^12.23.24",
-    "next": "14.0.2",
+    "immer": "^10.1.1",
     "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "tone": "^14.8.49",
@@ -34,13 +35,18 @@
     "@types/pako": "^2.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "3.6.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^6.0.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
