--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview --port 4444",
     "format": "npx prettier . --write",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --max-warnings 0",
     "prepare": "husky",
     "kit:new": "tsx scripts/new-kit.ts"
   },
@@ -20,33 +20,34 @@
     "framer-motion": "^12.23.24",
     "immer": "^10.1.1",
     "pako": "^2.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-helmet-async": "^2.0.5",
-    "react-icons": "^4.12.0",
-    "react-redux": "^8.1.3",
-    "tone": "^14.8.49",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "tone": "^15.1.22",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@types/node": "^20",
+    "@types/node": "^24.10.1",
     "@types/pako": "^2.0.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^8",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "3.6.2",
     "typescript": "^5",
-    "vite": "^6.0.3"
+    "typescript-eslint": "^8.47.0",
+    "vite": "^7.2.4"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
