--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "kit:new": "tsx scripts/new-kit.ts"
   },
   "dependencies": {
+    "@fontsource-variable/albert-sans": "^5.2.8",
     "@fontsource-variable/pixelify-sans": "^5.2.7",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -21,19 +22,24 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.17",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "immer": "^10.1.1",
     "pako": "^2.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tone": "^15.1.22",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@eslint/css": "^0.14.1",
     "@eslint/js": "^9.39.1",
+    "@eslint/json": "^0.14.0",
+    "@eslint/markdown": "^7.5.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/node": "^24.10.1",
     "@types/pako": "^2.0.4",
@@ -44,12 +50,14 @@
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "typescript": "^5",
     "typescript-eslint": "^8.47.0",
     "vite": "^7.2.4"
