--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource-variable/pixelify-sans": "^5.2.7",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-form": "^0.1.8",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slider": "^1.3.6",
