--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "immer": "^10.1.1",
+    "lucide-react": "^0.554.0",
     "pako": "^2.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tone": "^15.1.22",
