--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/albert-sans": "^5.2.8",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-form": "^0.1.8",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
@@ -63,9 +64,9 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "tsx": "^4.19.2",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "tsx": "^4.19.2",
     "typescript": "^5",
     "typescript-eslint": "^8.47.0",
     "vite": "^7.2.4"
