--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource-variable/albert-sans": "^5.2.8",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-form": "^0.1.8",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
@@ -62,9 +63,9 @@
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "tsx": "^4.21.0",
     "prettier": "3.7.3",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "tsx": "^4.21.0",
     "typescript": "^5",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.2.6"
