--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "prettier": "3.7.3",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.2.6"
